--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
+    <link rel="stylesheet" href="design.css"> <!-- Link to external CSS -->
 </head>
 <body>
 
@@ -27,6 +27,8 @@
         <button type="submit">Register</button>
     </form>
 </div>
+
+<script src="script.js"></script>
 
 </body>
 </html>
